# playervideo

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  packetqueue.cpp  packetqueue.h  resources.qrc  videowidget.cpp  videowidget.h
